[tool.poetry]
name = "fittonbot"
version = "0.1.0"
description = ""
authors = ["joeAtl <joe.chen@atlancube.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
logging = "^0.4.9.6"
telegram = "^0.0.1"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
