[tool.poetry]
name = "fittonbot"
version = "0.1.0"
description = ""
authors = ["joeAtl <joe.chen@atlancube.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
logging = "^0.4.9.6"
python-dotenv = "^1.0.1"
python-telegram-bot = "^20.5"
openai = "^1.44.1"
weave = "^0.51.2"
pillow = "^10.4.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
